# flask-project

./: .gitignore  pyproject.toml  task_1_algo.py  task_3.py
CatsApp/: Dockerfile  README.md  docker-compose.yml
CatsApp/app/: app.py  init.py  models.py  routes.py
CatsApp/app/migrations/versions/: 7648239125fc_.py
