[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Гурин Никита Сергеевич <nsgurin@fintechiq.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
SQLAlchemy = "^2.0.2"
pytest = "^7.2.1"
mypy = "^1.0.1"
httpx = "^0.23.3"
tqdm = "^4.65.0"
requests = "^2.28.2"
psycopg2-binary = "^2.9.5"
Flask-SQLAlchemy = "^3.0.3"
alembic = "^1.10.1"
Flask-Migrate = "^4.0.4"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
